tooling/nargo_cli/tests/snapshots/execution_failure/assert_msg_runtime/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected x == y, but x is 0x05 and y is 0x0a
  ┌─ src/main.nr:6:15
  │
6 │     assert_eq(x, y, f"Expected x == y, but x is {x} and y is {y}");
  │               ---- Assertion failed
  │
  = Call stack:
    1. src/main.nr:1:4

Error interpreting main function
