tooling/nargo_cli/tests/snapshots/execution_failure/assert_msg_runtime/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Assertion failed: Expected x == y, but x is 0x05 and y is 0x0a
  ┌─ src/main.nr:6:15
  │
6 │     assert_eq(x, y, f"Expected x == y, but x is {x} and y is {y}");
  │               ----
  │
  = Call stack:
    1. src/main.nr:6:15

Failed assertion
